Fix #30882: using an image sequence in the displace modifier did not update properly in animation rendering.